# magic_drafter_overlay

./: Cargo.toml  README.md
lib/card_database_reader/: Cargo.toml
lib/card_database_reader/src/: lib.rs
lib/card_ratings_reader/: Cargo.toml
lib/card_ratings_reader/src/: lib.rs
lib/player_log_reader/: Cargo.toml
lib/player_log_reader/src/: lib.rs
