[workspace]
members = [
    # For executable crates
    "bin/*",
    # For library crates 
    "lib/*"
]
resolver = "2"

[workspace.dependencies]
# local crates - bin
cli = {path = "./bin/cli", version = "0.0.0"}
ui = {path = "./bin/ui", version = "0.0.0"}
# local crates - libs
player_log_reader = {path = "./lib/player_log_reader", version = "0.0.0"}
card_database_reader = {path = "./lib/card_database_reader", version = "0.0.0"}
card_ratings_reader = {path = "./lib/card_ratings_reader", version = "0.0.0"}

# non-local crates
iced = { version = "0.14", features = ["image", "tokio"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
rusqlite = "0.40.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
rust_decimal = { version = "1.40", features = ["macros", "maths", "serde-with-str"] }
